--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,10 @@
 board_hostname=localhost
 board_port=8080
+
 folder_path=/home/vlad/workspace/RIW_PROIECT/workdir
+
 mongo_hostname=localhost
 mongo_port=27017
+
+exceptions_list=path
+stop_words_list=path
