Before trying distributed system

--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,13 @@
-board_hostname=localhost
-board_port=8080
+job_board_ip_address=localhost
+job_board_port=8080
 
-folder_path=/home/vlad/workspace/RIW_PROIECT/workdir
+workdir_path=/home/vlad/workspace/RIW_PROIECT/workdir/
+tempdir_path=/home/vlad/workspace/RIW_PROIECT/tempdir/
 
 mongo_hostname=localhost
 mongo_port=27017
 
-exceptions_list=path
-stop_words_list=path
+exceptions_list_path=/home/vlad/workspace/RIW_PROIECT/JobDispatcher/exception_words.txt
+stop_words_list_path=/home/vlad/workspace/RIW_PROIECT/JobDispatcher/stop_words.txt
+
+search_documents_number_limit=10
